@startuml
class Library {
    +name: String
    +addBook(book: Book)
    +createLoan(book: Book, user: User): Loan
}
class Book {
    +title: String
    +author: String
    +isbn: String
    +isAvailable: Boolean
}
class Loan {
    +book: Book
    +user: User
    +dateIssued: Date
    +dueDate: Date
}
Library *-- Book
Library *-- Loan
Loan *-- User
@enduml
